<resources>
    <string name="app_name">Find me a Pharmacy</string>
    <string name="main_activity_title">Pharmacies</string>
    <string name="the_app_name">Find me a Pharmacy</string>
    <string name="splash_image">splash_image</string>
    <string name="netbtn">netbtn</string>
    <string name="setbtn">setbtn</string>
    <string name="getposition" />
    <string name="felicia">Felicia</string>
    <string name="_12">12</string>
    <string name="subsidiary_name">Subsidiary Name</string>
    <string name="distance">distance</string>
    <string name="street">street</string>
    <string name="buttontoaddpins">buttontoaddpins</string>
    <string name="textview">TextView</string>
    <string name="pin_street">no street</string>
    <string name="pin_phone" >no phone</string>
    <string name="pin_">no website</string>
    <string name="pin_em">no email</string>
    <string name="_00_00">00:00</string>
    <string name="Retele">Networks</string>
    <string name="subsidiaries">Subsidiaries</string>
    <string name="settings">SETTINGS</string>
    <string name="choose_the_map_type">Choose the map Type</string>
    <string name="normal">Normal</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="language">Language</string>
    <string name="romanian">Romanian</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="nothing_changed">Nothing changed</string>
    <string name="dialog_saved">Saved</string>
    <string name="dialog_negative">Cancel</string>
    <string name="dialog_positive">Save</string>
    <string name="fetching_info">Fetching info</string>
    <string name="francais">Francais</string>
</resources>
