<?xml version="1.0" encoding="utf-8"?>
<Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:elevation="4dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="15dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rippler"
            android:src="@drawable/findme"
            android:id="@+id/getposition"
            android:contentDescription="@string/getposition"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rippler"
            android:src="@drawable/list_networks"
            android:id="@id/list_networks"
            android:contentDescription="@string/netbtn"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="45dp"
            android:onClick="getNetworksList"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rippler"
            android:src="@drawable/settings"
            android:id="@+id/settingsBtn"
            android:contentDescription="@string/setbtn"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="45dp" />

    </RelativeLayout>
</Toolbar>